deploy/kustomize/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: grpc-50051
      port: 50051
      targetPort: 50051
  selector:
    app: backend
