deploy/kustomize/backend/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
    - backend
  http:
    route:
    - destination:
        host: backend
        subset: ${VERSION}
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
spec:
  host: backend
  subsets:
    - name: ${VERSION}
      labels:
        version: ${VERSION}
